# YetAnotherMemoryAllocator

./: CMakeLists.txt  README.md
example/: CMakeLists.txt  example.c
src/: CMakeLists.txt  yam.h  yam_stdlib.c  yam_stdlib.h
src/internal/: block_alloc.c  block_alloc.h  block_group_management.c  block_group_management.h  block_group_record.c  block_group_record.h  block_record.c  block_record.h  debug.c  debug.h  init.c  init.h  os_interface.c  os_interface.h  utils.h  yam.c
tests/: CMakeLists.txt  block_alloc.cpp  os_interface.cpp  yam_alloc_free.cpp
